--- a/acxi.1
+++ b/acxi.1
@@ -396,8 +396,8 @@ go. Cannot start with \fB../\fR.
 
 .TP
 .B \-\-dither {dither-type}\fR
-Use with --resample and if you want to use a different dither type than default shebata. 
-Possible values:
+Use with \fB\-\-resample\fR and if you want to use a different dither type than 
+default shibata. Possible values:
 .nf
 \fB0\fR \- no dither
 \fBrectangular\fR \- rectangular dither
