--- a/acxi.1
+++ b/acxi.1
@@ -401,7 +401,7 @@ default shibata. Possible values:
 .nf
 \fB0\fR \- no dither
 \fBrectangular\fR \- rectangular dither
-\fBtriangular\fR \- rectangular dither
+\fBtriangular\fR \- triangular dither
 \fBtriangular_hp\fR \- triangular dither with high pass 
 \fBlipshitz\fR \- Lipshitz noise shaping dither
 \fBshibata\fR \- Shibata noise shaping dither (default value)
