--- a/acxi.1
+++ b/acxi.1
@@ -1046,7 +1046,8 @@ Changing quality levels will not redo existing files.
 override the default file types acxi will sync. Set to 'none', if you only want 
 to sync the music files, not copy over images, text files, etc.
 
-\fBDITHER\fR \- See \fB\-\-dither\fR for supported values and use.
+\fBDITHER\fR \- See \fB\-\-dither\fR. Sample (default value): 
+\fBDITHER=shibata\fR
 
 \fBINPUT_TYPE\fR \- Sample: \fBINPUT_TYPE=flac\fR 
 
