--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-10\-08" acxi "acxi manual"
+.TH ACXI 1 "2021\-10\-09" acxi "acxi manual"
 .SH NAME
 acxi \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -181,6 +181,7 @@ To write to a file, use something like this:
 The tee will allow the output to also scroll on screen while it runs, which is
 helpful in many cases. Otherwise just redirect output to file directly.
 
+\fB\-v 0\fR turns off per file reports, and shows only per directory summary; 
 \fB\-v 2\fR wraps per file data to key: value pair lines, adds ffp signature 
 (flac only); \fB\-v 3\fR adds raw non rounded seconds and file size in bytes to 
 all size / time results.
