--- a/acxi.1
+++ b/acxi.1
@@ -744,8 +744,8 @@ line, and must be in first 6 lines of file.
 Alternately, if the first line contains a known field name, like Album, 
 AlbumArtist, Artist, Band, Composer, City, State, Country, Location, Event, 
 Festival, Venue, Date, Year, Producer, Taper, Genre, Cover/Image, followed by a 
-':' and a value, it will prefill using those values and map those field names to 
-the proper tag name. This tends to be more reliable.
+colon ':' and a value, it will prefill using those values and map those field 
+names to the proper tag name. This tends to be more reliable.
 
 Sample:
 .nf\fB
