--- a/acxi.1
+++ b/acxi.1
@@ -636,13 +636,13 @@ Only include the actual non space character(s) used to separate the two items.
 
 .nf
 Example (info file track title format: 23. Band Name / Song):
-\fBpinxi \-s ./ \-SE \-\-ma 'at:/'\fR
+\fBacxi \-s ./ \-SE \-\-ma 'at:/'\fR
 Example (info file track title format: 23. Band Name - Song-Name):
-\fBpinxi \-s ./ \-SE \-\-ma 'at:-'\fR
+\fBacxi \-s ./ \-SE \-\-ma 'at:-'\fR
 Example  (info file track title format: 22. Song \\ Band Name):
-\fBpinxi \-s ./ \-SE \-\-ma 'ta:\\'\fR
+\fBacxi \-s ./ \-SE \-\-ma 'ta:\\'\fR
 Example (info file track title format: 03. Song \\\\ Band Name):
-\fBpinxi \-s ./ \-SE \-\-ma 'ta:\\\\'\fR
+\fBacxi \-s ./ \-SE \-\-ma 'ta:\\\\'\fR
 .fi
 
 Not OK (info file track title format: 23. Band \- Name - Song). This would result 
