--- a/acxi.1
+++ b/acxi.1
@@ -20,7 +20,8 @@ Checksums: \fBacxi\fR [\fB\-\-analyze\fR, \fB\-Z\fR]
 [\fB\-\-duplicates\fR, \fB\-\-dupes\fR] [\fB\-\-ffprobe\fR]
 [\fB\-\-no\-ffp\fR] [\fB\-\-no\-md5\fR] 
 .IP * 2
-Syncing: \fBacxi\fR [\fB\-\-append\fR, \fB\-a\fR {extensions}] 
+Syncing:
+\fBacxi\fR [\fB\-\-append\fR, \fB\-\-copy\-append\fR, \fB\-a\fR {extensions}] 
 [\fB\-\-clean\fR] [\fB\-\-codec\fR {aac|libfdk_aac2}] 
 [\fB\-\-copy\fR, \fB\-c\fR {extensions}] [\fB\-\-copy\-append \fR {extensions}] 
 [\fB\-\-dither\fR {dither\-type}] [\fB\-\-dot\fR] 
