Added d1t34 type syntax for -Xn

--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2022\-11\-22" acxi "acxi manual"
+.TH ACXI 1 "2022\-11\-24" acxi "acxi manual"
 .SH NAME
 acxi \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -573,7 +573,7 @@ in and correct items. Good in combination with \fBt\fR.
 of Title string. Required for the prefill track title cleanup of track times. 
 
 * \fBn\fR \- fix track numbering to be consistent '0X. ' or 'Y-0X'. See 
-\fB\-\-prefill\fR track terminators for stopping at end of track listing.
+\fB\-\-prefill\fR track terminators for stopping fixes at end of track listing.
 
 * \fBq\fR \- add in 2 technical quality info lines after top header. Reads flac 
 file in directory to determine bit rate, sampling frequency, and channels. 
